# Shunting-Yard

./: .gitignore  CMakeLists.txt
src/: main.c  shunting_yard.c  shunting_yard.h
